三行代码实现 JSON API

--- a/tuture.yml
+++ b/tuture.yml
@@ -1,8 +1,8 @@
-name: Express 快速入门教程
+name: 一杯茶的时间，上手 Express 框架开发
 id: cd5b993
 github: 'https://github.com/mRcfps/express_resume'
 created: '2019-11-26T12:31:31.116Z'
-updated: 2019-12-12T10:50:28.385Z
+updated: 2019-12-18T02:09:41.846Z
 topics:
   - Express
 categories:
@@ -23,7 +23,7 @@ steps:
 
             在讲解 Express 之前，我们先了解一下怎么用 Node.js 内置的 http 模块来实现一个服务器，从而能够更好地了解
             Express 对底层的 Node 代码做了哪些抽象和封装。如果你还没有安装
-            Node.js，可以去[官方网站](https://nodejs.org/)下载安装包。
+            Node.js，可以去[官方网站](https://nodejs.org/)下载并安装。
 
 
             我们将实现一个个人简历网站。创建一个文件夹 express_resume，并进入其中：
@@ -77,7 +77,7 @@ steps:
 
         自从 Ryan Dahl 在 2009 年的 JSConf 正式推出 Node.js
         平台后，这门技术的使用率就如同坐了火箭一般迅速上升，成为了最受喜爱的后端开发平台之一，而 Express 则是其中最为耀眼的 Web
-        框架。在在正式开始这篇教程之前，我们将列举一下这篇教程所需要的预备知识和学习目标。
+        框架。在正式开始这篇教程之前，我们将列举一下这篇教程所需要的预备知识、所用技术和学习目标。
 
 
         ### 预备知识
@@ -88,9 +88,20 @@ steps:
 
         - JavaScript 语言基础知识（包括一些常用的 ES6+ 语法）
 
-        - Node.js 基础知识，特别是异步编程（这篇教程主要用到的是回调函数）和 Node 模块机制，还有 npm 的基本使用
+        - Node.js 基础知识，特别是异步编程（这篇教程主要用到的是回调函数）和 Node 模块机制，还有 npm
+        的基本使用，可以参考[这篇教程](https://tuture.co/2019/12/03/892fa12/)进行学习
 
         - HTTP 协议基础知识，浏览器和服务器之间是如何互动的
+
+
+        ### 所用技术
+
+
+        - **Node.js**：8.x 及以上
+
+        - **npm**：6.x 及以上 
+
+        - **Express.js**：4.x
 
 
         ### 学习目标
@@ -103,7 +114,7 @@ steps:
 
         - 使用模板引擎渲染页面，并接入 Express 框架中
 
-        - 使用 Express 的静态资源服务
+        - 使用 Express 的静态文件服务
 
         - 编写自定义的错误处理函数
 
@@ -126,7 +137,8 @@ steps:
         状态码和头部字段，最终返回内容。如果我们需要开发更复杂的功能，涉及到多种状态码和头部信息（例如用户鉴权），这样的手动管理模式非常不方便
 
         - **没有专门的路由机制**——路由是服务器最重要的功能之一，通过路由才能根据客户端的不同请求 URL 及 HTTP
-        方法来返回相应内容。但是上面这段代码只能在 `http.createServer` 的回调函数中通过判断请求 `req` 的内容才能实现路由功能
+        方法来返回相应内容。但是上面这段代码只能在 `http.createServer` 的回调函数中通过判断请求 `req`
+        的内容才能实现路由功能，搭建大型应用时力不从心
 
 
         由此就引出了 Express 对内置 http 的两大封装和改进：
@@ -185,7 +197,8 @@ steps:
         ### 更强大的 Request 和 Response 对象
 
 
-        首先是 Request 请求对象。下面列举一些请求体上比较重要的成员（如果不知道是什么没关系）：
+        首先是 Request 请求对象，通常我们习惯用 `req` 变量来表示。下面列举一些 `req`
+        上比较重要的成员（如果不知道是什么也没关系哦）：
 
 
         - `req.body`：客户端请求体的数据，可能是表单或 JSON 数据
@@ -197,7 +210,7 @@ steps:
         - `req.cookies`：客户端的 cookies
 
 
-        然后是 Response 响应对象，可以执行一系列响应操作，例如：
+        然后是 Response 响应对象，通常用 `res` 变量来表示，可以执行一系列响应操作，例如：
 
 
         ```javascript
@@ -219,7 +232,29 @@ steps:
         ```
 
 
-        Response 对象上的操作非常丰富，并且还可以链式调用。这里我们只需了解 Express 的 Reponse 对象很强大就可以了。
+        Response 对象上的操作非常丰富，并且还可以链式调用：
+
+
+        ```javascript
+
+        // 设置状态码为 404，并返回 Page Not Found 字符串
+
+        res.status(404).send('Page Not Found');
+
+        ```
+
+
+
+        ::: info
+
+        **提示**
+
+
+        在这里我们并没有简单地列举 Request 和 Response 的[全部
+        API](http://expressjs.com/en/4x/api.html)
+        ，因为[图雀社区](https://tuture.co)的理念是——从实战中学习和深化理解，拒绝枯燥的 API 记忆！
+
+        :::
 
 
         ### 路由机制
@@ -301,13 +336,25 @@ steps:
         独有的概念。相反，它是一种广为使用的软件工程概念（甚至已经延伸到了其他行业），是指**将具体的业务逻辑和底层逻辑解耦的组件**（可查看这个[讨论](https://www.zhihu.com/question/19730582)）。换句话说，中间件就是能够适用多个应用场景、可复用性良好的代码。
 
 
-        Express 的中间件流程如下图所示：
+        Express 的简化版中间件流程如下图所示：
 
 
         ![](tuture-assets/middleware.png)
 
 
-        首先客户端向服务器发起请求，然后服务器依次每个中间件，最后到达路由，选择相应的逻辑来执行。
+        首先客户端向服务器发起请求，然后服务器依次执行每个中间件，最后到达路由，选择相应的逻辑来执行。
+
+
+
+        ::: info
+
+        **提示**
+
+
+        这个是一个简化版的流程描述，目的是便于你对中间件有个初步的认识，在后面的章节中我们将进一步完善这一流程。
+
+        :::
+
 
 
         有两点需要特别注意：
@@ -396,7 +443,7 @@ steps:
         ```
 
 
-        这里为了让你深刻理解中间件的概念，我们只实现了一个功能很简单的中间件。实际上，中间件不仅可以读取 `req`
+        这里为了让你初步理解中间件的概念，我们只实现了一个功能很简单的中间件。实际上，中间件不仅可以读取 `req`
         对象上的各个属性，还可以添加新的属性或修改已有的属性（后面的中间件和路由函数都可以获取），能够很方便地实现一些复杂的业务逻辑（例如用户鉴权）。
   - name: 用模板引擎渲染页面
     commit: 01e8e9c
@@ -448,7 +495,7 @@ steps:
         **提示**
 
 
-        如果你不了解模板引擎，不用担心，这篇教程几乎不需要用到它的功能，你只需理解成一个“升级版的 HTML
+        如果你不了解模板引擎，不用担心，这篇教程几乎不需要用到它的高级功能，你只需理解成一个“升级版的 HTML
         文档”即可。如果你感兴趣，[这篇文章](https://div.io/topic/758)是很好的介绍。
 
         :::
@@ -475,7 +522,7 @@ steps:
     commit: bb79800
     explain:
       pre: >-
-        通常网站需要提供静态文件服务，例如图片、CSS文件、JS文件等等，而 Express 已经自带了静态文件服务中间件
+        通常网站需要提供静态文件服务，例如图片、CSS 文件、JS 文件等等，而 Express 已经自带了静态文件服务中间件
         `express.static`，使用起来非常方便。
       post: |-
         再次运行服务器，并访问我们的网站。首页如下：
@@ -515,7 +562,8 @@ steps:
           pre: 样式文件 public/css/style.css 的代码如下（直接复制粘贴即可）：
           post: >-
             图片文件可通过这个 GitHub
-            上的[链接](https://github.com/mRcfps/express_resume/raw/master/public/img/tuture-logo.png)下载。
+            上的[链接](https://github.com/mRcfps/express_resume/raw/master/public/img/tuture-logo.png)下载，然后下载到
+            public/img 目录中。当然，你也可以使用自己的图片，记得在模板中替换相应的链接就可以了。
       - file: views/index.hbs
         display: true
         explain:
@@ -560,9 +608,9 @@ steps:
         人有悲欢离合，月有阴晴圆缺，服务器也有出错的时候。HTTP 错误一般分为两大类：
 
 
-        - 客户端方面的错误（状态码 4xx），例如访问了不存在的页面（404）、权限不够（403）
+        - 客户端方面的错误（状态码 4xx），例如访问了不存在的页面（404）、权限不够（403）等等
 
-        - 服务器方面的错误（状态码5xx），例如服务器内部出现错误及异常等等
+        - 服务器方面的错误（状态码 5xx），例如服务器内部出现错误（500）或网关错误（503）等等
 
 
         如果你打开服务器，访问一个不存在的路径，例如 `localhost:3000/what`，就会出现这样的页面：
@@ -574,8 +622,8 @@ steps:
         很显然，这样的用户体验是很糟糕的。
 
 
-        在这一节中，我们将讲解如何在 Express 框架中处理 404（页面不存在）及
-        500（服务器内部错误）。在此之前，我们要升级一下对中间件的概念，如下图所示：
+        在这一节中，我们将讲解如何在 Express 框架中处理 404（页面不存在）及 500（服务器内部错误）。在此之前，我们要完善一下
+        Express 中间件的运作流程，如下图所示：
 
 
         ![](tuture-assets/middleware-new.png)
@@ -595,7 +643,7 @@ steps:
 
         - 对于 404，只需在所有路由之后再加一个中间件，用来接收所有路由均匹配失败的请求
 
-        - 对于错误处理，前面所有中间件抛出异常时都会进入错误处理函数，可以使用 Express 自带的，也可以自定。
+        - 对于错误处理，前面所有中间件抛出异常时都会进入错误处理函数，可以使用 Express 自带的，也可以自定义。
 
 
         ### 处理 404
@@ -613,7 +661,7 @@ steps:
         ```
 
 
-        `*` 表示匹配任何路径。将此中间件放在所有路由后面，即可捕获所有访问路径不存在的请求。
+        `*` 表示匹配任何路径。将此中间件放在所有路由后面，即可捕获所有访问路径均匹配失败的请求。
 
 
         ### 处理内部错误
@@ -647,12 +695,25 @@ steps:
         :::
 
 
-        实际上，Express 的默认错误处理机制可以通过设置 `NODE_ENV` 来进行切换。如果我们将其设置为生产环境 `production`：
+        实际上，Express 的默认错误处理机制可以通过设置 `NODE_ENV` 来进行切换。我们将其设置为生产环境
+        `production`，再开启服务器。如果你在 Linux、macOS 或 Windows 下的 Git Bash 环境中，可以运行以下命令：
 
 
-        ```bash
+        ```Bash
 
         NODE_ENV=production node server.js
+
+        ```
+
+
+        如果你在 Windows 下的命令行，运行以下命令：
+
+
+        ```Bash
+
+        set NODE_ENV=production
+
+        node server.js
 
         ```
 
